# enum2egui

./: Cargo.toml  MIT.md  README.md  justfile
demo/: Cargo.toml
demo/src/: app.rs  lib.rs  main.rs
enum2egui-derive/: Cargo.toml
enum2egui-derive/src/: enums.rs  lib.rs  structs.rs
src/: gui.rs  lib.rs
