[package]
name = "enum2egui"
version = "0.3.11"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
enum2egui is a rust derive macro that creates a set of egui ui databindings from arbitrary data structures.
Supports egui v0.31.0
"""
homepage = "https://github.com/matthewjberger/enum2egui"
repository = "https://github.com/matthewjberger/enum2egui"
keywords = ["egui"]
license = "MIT"
edition = "2021"

[dependencies]
egui = "0.31.0"
enum2egui-derive = { path = "enum2egui-derive", version = "0.3.11" }
hashbrown = { version = "^0.15.2", optional = true }

[workspace]
members = ["demo"]

[features]
hashbrown = ["dep:hashbrown"]
