[package]
name = "enum2egui"
version = "0.34.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
enum2egui is a rust derive macro that creates a set of egui ui databindings from arbitrary data structures.
"""
homepage = "https://github.com/matthewjberger/enum2egui"
repository = "https://github.com/matthewjberger/enum2egui"
keywords = ["egui"]
license = "MIT"
edition = "2024"

[dependencies]
egui = "0.34.1"
enum2egui-derive = { path = "enum2egui-derive", version = "0.34.0" }
hashbrown = { version = "^0.16.0", optional = true }

[workspace]
members = ["demo"]

[features]
hashbrown = ["dep:hashbrown"]
