[package]
name = "enum2egui-demo"
version = "0.1.0"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
edition = "2021"

[dependencies]
egui = "0.29.1"
enum2str = "0.1.10"
enum2egui = { path = "..", features = ["hashbrown"] }
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",
] }
hashbrown = { version = "0.15.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
