[package]
name = "enum2egui-derive"
version = "0.3.10"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
enum2egui-derive is a rust derive macro that creates a set of egui ui databindings from arbitrary data structures.
"""
homepage = "https://github.com/matthewjberger/enum2egui"
repository = "https://github.com/matthewjberger/enum2egui"
keywords = ["egui"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
egui = "0.29.1"
hashbrown = "0.15.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
